<resources>
    <string name="app_name">AnimalQuiz</string>
    <string name="action_settings">Settings</string>

    <string name="question_text">This is animal %1$d of %2$d</string>

    <string name="number_of_guesses_title">Number of Guesses</string>
    <string name="number_of_guesses_description">Show 2,4 or 6 Guess Options</string>

    <string name="animal_types_title">Animals</string>
    <string name="animal_types_description">Types of Animals that you can include in the quiz</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="choose_color_description">Choose one of these color as background color</string>
    <string name="default_color_black">Black</string>

    <string name="choose_font">Font for Quiz</string>
    <string name="choose_font_description">Choose one of the font for quiz</string>
    <string name="default_font">Chunkfive.otf</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    
    <string name="results_string_value">%1$d number of guesses and %2$.02f%% correct</string>
    <string name="reset_animal_quiz">RESET THE ANIMAL QUIZ</string>

    <string name="wrong_answer_message">No</string>
    
    <string name="default_animal_type">Wild_Animals</string>
    
    <string name="toast_message">One Type of animal must be selected.The default value is wild animals</string>

    <string name="change_message">New changes are applied</string>


</resources>